--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,10 +23,13 @@
     "ejs": "^3.1.9",
     "expess": "^0.0.1-security",
     "express": "^4.18.2",
+    "html-pdf": "^3.0.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "puppeteer": "^21.5.2",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
