--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.28",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
