--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-phone-number-input": "^3.3.6",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
