--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
