--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,8 +26,11 @@
     "html-pdf": "^3.0.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.14.0",
     "puppeteer": "^21.5.2",
     "qrcode": "^1.5.3"
   },
