--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,8 +28,10 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "pdf-creator-node": "^2.3.5",
     "puppeteer": "^21.5.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "wkhtmltopdf": "^0.4.0"
   },
   "devDependencies": {
     "prisma": "^5.7.0"
