--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/x-data-grid": "^6.15.0",
+    "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
     "bwip-js": "^4.1.2",
     "file-saver": "^2.0.5",
