--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,14 +21,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "exceljs": "^4.4.0",
     "expess": "^0.0.1-security",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "papaparse": "^5.4.1",
     "puppeteer": "^21.5.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "prisma": "^5.7.1"
