--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.5.0",
     "bwip-js": "^4.1.2",
     "file-saver": "^2.0.5",
+    "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^7.2.0",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "qrcode.react": "^3.1.0",
@@ -26,6 +28,7 @@
     "react-barcode": "^1.4.6",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.11.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.6",
