--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
     "papaparse": "^5.4.1",
     "puppeteer": "^21.5.2",
     "qrcode": "^1.5.3",
+    "slugify": "^1.6.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
