--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@mui/x-charts": "^6.18.7",
     "@mui/x-data-grid": "^6.15.0",
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
