--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "qrcode.react": "^3.1.0",
