--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
     "bwip-js": "^4.1.2",
+    "chart.js": "^4.4.1",
     "file-saver": "^2.0.5",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -30,6 +31,7 @@
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
