--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "papaparse": "^5.4.1",
     "puppeteer": "^21.5.2",
