--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,7 +14,8 @@
   "author": "Abdul Majid",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.9.1",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -36,6 +37,6 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "prisma": "^5.9.0"
+    "prisma": "^5.9.1"
   }
 }
