--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --port 3092",
-    "build": "vite build",
+    "build": "vite build && copyfiles -f ./web.config ./dist/",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -21,7 +21,7 @@
     "bwip-js": "^4.1.2",
     "chart.js": "^4.4.1",
     "file-saver": "^2.0.5",
-    "i18next": "^23.8.2",
+    "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
@@ -34,7 +34,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.1",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.11.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.9",
@@ -54,6 +54,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
