--- a/Backend/web.config
+++ b/Backend/web.config
@@ -3,6 +3,7 @@
     <system.webServer>
         <rewrite>
             <rules>
+                <remove name="SPA Routes" />
                 <rule name="ReverseProxyInboundRule1" stopProcessing="true">
                     <match url="(.*)" />
                     <action type="Rewrite" url="http://localhost:3091/{R:1}" />
