--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
     "puppeteer": "^21.5.2",
     "qrcode": "^1.5.3",
     "slugify": "^1.6.6",
+    "socket.io": "^4.7.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
