--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -44,6 +44,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.7.28",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
