--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "update:schema": "npm install && cd ./ && npx prisma generate && cd prismaOldGs1Db && npx prisma generate && cd ../prisma/gs1dl && npx prisma generate && cd ../wtrace && npx prisma generate && cd ../../ && npm start"
+
   },
   "keywords": [
     "gs1"
