--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,9 +17,9 @@
     "@mui/x-charts": "^6.18.7",
     "@mui/x-data-grid": "^6.15.0",
     "@react-google-maps/api": "^2.19.2",
+    "apexcharts": "^3.48.0",
     "axios": "^1.5.0",
     "bwip-js": "^4.1.2",
-    "chart.js": "^4.4.1",
     "file-saver": "^2.0.5",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -30,6 +30,7 @@
     "qrcode.react": "^3.1.0",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-barcode": "^1.4.6",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
